--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=
-STYLE_SETTINGS_BODY_CLASSES=
+STYLE_SETTINGS_CSS=body.css-settings-manager { --color-accent-rgb-l: 243, 90, 55; --color-accent-rgb-d: 246, 141, 69; --active-line-accent: var(--background-hover); --h1-color: hsl(33.12,100%,62.35%); --h2-color: hsl(35.02,100%,40.98%); --h3-color: hsl(343.01,100%,66.08%); --indentation-guide-active: var(--interactive); --checkbox-radius: 16px; --checklist-done-decoration: none; --checklist-done-color: var(--text-faint); --tag-radius: 2em; --tag-border-width: 1px; --tag-decoration: none; --tag-decoration-hover: none; --checkbox-color-rgb: 246, 141, 69; --link-decoration: none; --link-decoration-hover: none; --h4-variant: all-small-caps; --h5-variant: all-petite-caps; --h6-color: hsl(184.88,100%,40.98%); --h6-style: normal; --h6-variant: all-petite-caps; --link-text-transform: none; --link-style: normal; --link-external-decoration: none; --link-external-decoration-hover: none; --h4-color: hsl(184.88,100%,40.98%); --h5-color: hsl(335.02,100%,40.98%); } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { --tag-background-hover: rgb(235,84,108); --tag-color-hover: rgb(28,27,27); }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app styled-scrollbars show-inline-title show-ribbon show-view-header outliner-plugin-dnd css-settings-manager sanctum-default-light sanctum-default-dark # hide-vault-title default-marker-odd default-marker-even table-hover-row table-tabular-figures sticky-view-actions nav-folder-indicators AT-row is-maximized is-focused
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/nickmilo/Cybertron/HEAD/theme.css
 BASE_THEME=dark
