--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ THEME=https://raw.githubusercontent.com/nickmilo/Cybertron/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
